# ETCA

./: .gitignore  LICENSE  README.md  a.py  build.bat
DOCS/: CODE_OF_CONDUCT.md  contributing.md
SRC/: CMakeLists.txt  build.ps1
SRC/include/: color_data.h  compressor.h  decompressor.h  entropy_coding.h  etca_format.h  hierarchical_address.h  image_io.h  spectre_tile.h  spectre_tree.h  spectrum_analyzer.h  tile_inflater.h  variance_calculator.h
SRC/src/: color_data.cpp  compressor.cpp  decompressor.cpp  entropy_coding.cpp  etca_cli.cpp  etca_format.cpp  hierarchical_address.cpp  image_io.cpp  main.cpp  spectre_tile.cpp  spectre_tree.cpp  spectrum_analyzer.cpp  tile_inflater.cpp  variance_calculator.cpp
